# game_choice

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-tests.yml
src/: code_one.py  code_two.py  demo.py
src/tests/: test_code_one.py  test_code_two.py
