[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "game_package_reagangonzales"
version = "0.0.1"
authors = [
 { name="Reagan Gonzales", email="rgonzales@smith.edu" },
 { name = "Itzel Aleman Flores", email = "ialemanflores@smith.edu"}
]
description = "A package to help people choose a video game to play"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
 "Programming Language :: Python :: 3",
 "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
[project.urls]
Homepage = "https://github.com/reagangonzales/game_choice"
Issues = "https://github.com/reagangonzales/game_choice/issues"